Updating the variants from PathogenTest to Case's form and vice versa. Fatigue symptom for all countries Enabling the test result field.